initial draft of application

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@
 # For Django versioning we use ~= (e.g. Django~=4.2.0) which will keep the minor version up to date (e.g. the latest version prior to 4.3.0)
 
 Django~=4.2.0
+Pillow~=11.0.0
 flake8
+coverage
